syntax = "proto3";

option csharp_namespace = "MathgRPCServer.Grpc";  // Пространство имен для сервера

service StudentService {
    rpc GetStudent (StudentRequest) returns (StudentResponse);
    rpc CreateStudent (CreateStudentRequest) returns (StudentResponse);
    rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentResponse);
    rpc UpdateStudent (UpdateStudentRequest) returns (StudentResponse);
}

message StudentRequest {
    int32 id = 1;
}

message StudentResponse {
    int32 id = 1;
    string name = 2;
}

message CreateStudentRequest {
    string name = 1;
}

message DeleteStudentRequest {
    int32 id = 1;
}

message DeleteStudentResponse {
    bool success = 1;
}

message UpdateStudentRequest {
    int32 id = 1;
    string name = 2;
}
